sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:8: error: not found: value j
      while(j>0 && !plusPetit(i-n*ecart,i-(n-1)*écart)){
            ^AlgShellSort:8: error: not found: value écart
      while(j>0 && !plusPetit(i-n*ecart,i-(n-1)*écart)){
                                                ^AlgShellSort:9: error: not found: value écart
        copie(i-n*ecart,i-(n-1)*écart)
                                ^